fix(home): shrink logo to makes sure everything is visible on wider screens as well

--- a/public/style/login.css
+++ b/public/style/login.css
@@ -155,7 +155,7 @@
 .wedding-logo {
   display: block;
   width: 70vw;
-  max-height: 450px; }
+  max-height: 300px; }
 
 .wedding-home-heading {
   font-family: Italianno;
