--- a/public/style/wedding.css
+++ b/public/style/wedding.css
@@ -257,7 +257,7 @@ a {
 .wedding-logo {
   display: block;
   width: 70vw;
-  max-height: 450px; }
+  max-height: 300px; }
 
 .wedding-home-heading {
   font-family: Italianno;
