--- a/src/style/_home.scss
+++ b/src/style/_home.scss
@@ -34,7 +34,7 @@
 .wedding-logo {
   display: block;
   width: 70vw;
-  max-height: 450px;
+  max-height: 300px;
 }
 
 
